Closed Bug 1842538 Opened 2 years ago Closed 2 years ago

[sw-wr] artifacts on a gradient demo if you resize the window or pinch-zoom

Categories

(Core :: Graphics: WebRender, defect)

defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox-esr115 --- wontfix
firefox115 --- wontfix
firefox116 --- wontfix
firefox117 --- fixed

People

(Reporter: mayankleoboy1, Assigned: lsalzman)

References

(Regression)

Details

(Keywords: regression)

Attachments

(3 files)

enable sw-wr
Go to https://codepen.io/ericthayer/pen/BwVqXj

either increase the width of the code-panes, or pinch-zoom, or change the width of the browser window

AR: Artifacts

Regression range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=640d8d3f3540386be847160f0e6c959e6e0d5e10&tochange=7ea6d747243265898cd60de1664724fb6e46e811

suspect: bug 1686244

Attached file about:support
Severity: -- → S3

Set release status flags based on info from the regressing bug 1686244

:lsalzman, since you are the author of the regressor, bug 1686244, could you take a look?

For more information, please visit BugBot documentation.

Due to quantization and rounding of the linear gradient deltas, if
the amount of stepping due to long horizontal spans exceeds the precision
of the delta, then this can cause calculations to overflow. To avoid this,
break the stepping up into segments that re-quantize the color every so
often.

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/044dfc94e976 Avoid overflow in linear gradient stepping. r=aosmond
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch

Fixed on Nightly. Thanks!

Flags: needinfo?(lsalzman)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: