Bug 1842538 - Avoid overflow in linear gradient stepping. r=aosmond

Due to quantization and rounding of the linear gradient deltas, if
the amount of stepping due to long horizontal spans exceeds the precision
of the delta, then this can cause calculations to overflow. To avoid this,
break the stepping up into segments that re-quantize the color every so
often.

Differential Revision: https://phabricator.services.mozilla.com/D183568